<resources>
    <string name="app_name">ProyectoCM20171</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Contraseña</string>
    <string name="username">Nombre de usuario</string>
    <string name="login">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="field_error">Ingresa un valor</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="age">Edad</string>
    <string name="addImage">Añadir avatar</string>
    <string name="email">Correo</string>

    <string name="title_activity_maps">Map</string>
    <string name="btn_guardar">Guardar</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">ir a home</string>
    <string name="fail_permission">permission denied</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="msg_login">¿Ya tienes una cuenta? Inicia sesión!!</string>
    <string name="auth_failed">Error al intentar iniciar sesión</string>
    <string name="phonenumber">Teléfono</string>
    <string name="city">Ciudad</string>
    <string name="updateData">Actualizar</string>
    <string name="groupName">Nombre del grupo</string>
    <string name="latitude_label">Latitud</string>
    <string name="longitude_label">Longitud</string>
    <string name="btn_create">Crear</string>
    <string name="cyclistname">Nombre de un usuario</string>
    <string name="nameEvent">Nombre</string>
    <string name="personInCharge">Persona a cargo</string>
    <string name="dateEvent">Fecha del evento</string>
    <string name="locationEvent">Ubicación</string>
    <string name="descriptionEvent">Descripción</string>
    <string name="guardar">Guardar</string>
    <string name="remove">Remover</string>
    <string name="inicio">Inicio</string>
    <string name="btn_start">Iniciar</string>
    <string name="iniciar">Iniciar</string>
    <string name="notificar_label">Notificar</string>
</resources>
