<ScrollView
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.gr04_20171.proyectocm20171.user.login.LoginFragment">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <!--android:src="@drawable/logo"-->
    <ImageView
        android:id="@+id/image_logo"
        android:background="@drawable/bicicleta"
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_mail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"/>


    <TextView
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:linksClickable="true"
        android:textColorLink="#17e109"
        />
</LinearLayout>
</ScrollView>