<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.edu.udea.compumovil.gr04_20171.proyectocm20171.MapsActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TableLayout
        android:id="@+id/coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:layout_marginTop="48dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="New Text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="20.3" />

            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="New Text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="45.2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_latitude_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/latitude_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:id="@+id/tv_longitude_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/longitude_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/btn_travesía"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinates"
        android:text="@string/btn_create"
        android:layout_marginLeft="140dp"
        />
</RelativeLayout>
