<ScrollView
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.gr04_20171.proyectocm20171.cyclist.ProfileFragment">

    <ImageView android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:src="@drawable/carretera"
        android:alpha="0.8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/person"
                android:layout_marginRight="8dp"
                android:alpha="0.6"
                android:layout_gravity="center_vertical"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:enabled="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/email"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.6"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:enabled="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/phone"
                android:layout_marginRight="8dp"
                android:alpha="0.6"
                android:layout_gravity="center_vertical"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phonenumber"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phonenumber"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="13dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/world"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.6" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_city"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/age"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.6" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_age"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="13dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/updateData"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>
